hw4/part1/shell_examples.txt
(1)
In [1]: spam = "This is Alice's cat"

In [2]: print(spam)
This is Alice's cat

In [3]:

(2)
In [1]: spam = 'Say hi to Bob\'s mother.
   ...: quit()

KeyboardInterrupt escaped interact()


In [1]: spam = 'Say hi to Bob\'s mother.'

In [2]: print(spam)
Say hi to Bob's mother.

(3)
In [1]: print("Hello there!\nHow are you?\nI\'m doing fine.")
Hello there!
How are you?
I'm doing fine.

(4)
In [3]: print(r"That is Carol\'s cat.")
That is Carol\'s cat.

(5)
In [1]: spam = "Hello, world!"

In [2]: spam[1]
Out[2]: 'e'

In [3]: spam[0]
Out[3]: 'H'

In [4]: spam[4]
Out[4]: 'o'

In [5]: spam[-1]
Out[5]: '!'

In [6]: spam[0:5]
Out[6]: 'Hello'

In [7]: spam[:5]
Out[7]: 'Hello'

In [8]: spam[7:]
Out[8]: 'world!'

(6)
In [1]: spam = "Hello, world!"

In [2]: fizz = spam[0:5]

In [3]: print(fizz)
Hello

(7)
In [1]: 'Hello' in 'Hello, world'
Out[1]: True

In [2]: 'Hello' in 'Hello'
Out[2]: True

In [3]: 'HELLO' in 'Hello, World'
Out[3]: False

In [4]: " in 'spam'
  File "<ipython-input-4-0ef41ee11637>", line 1
    " in 'spam'
               ^
SyntaxError: EOL while scanning string literal


In [5]: spam = "Hello, world!"

In [6]: '' in 'spam'
Out[6]: True

In [7]: 'cats' not in 'cats and dogs'
Out[7]: False

(8)
In [8]: name = "Al"

In [9]: age = 4000

In [10]: "My name is %s. I am %s years old." % (name, age)
Out[10]: 'My name is Al. I am 4000 years old.'

In [11]: f"My name is {name}. Next year I will be {age + 1}."
Out[11]: 'My name is Al. Next year I will be 4001.'

In [12]: "My name is {name}. Next year I will be {age + 1}."
Out[12]: 'My name is {name}. Next year I will be {age + 1}.'

(9)
In [1]: spam = "Hello, World!"

In [2]: spam = spam.upper()

In [3]: print(spam)
HELLO, WORLD!

In [4]: spam = spam.lower()

In [5]: print(spam)
hello, world!

(10)
In [6]: "Hello".upper()
Out[6]: 'HELLO'

In [7]: "Hello".upper().lower()
Out[7]: 'hello'

In [8]: "Hello".upper().lower().upper()
Out[8]: 'HELLO'

In [9]: "HELLO".lower()
Out[9]: 'hello'

In [10]: "HELLO".lower().islower()
Out[10]: True

(11)
In [11]: "hello".isalpha()
Out[11]: True

In [12]: "hello123".isalpha()
Out[12]: False

In [13]: "hello123".isalnum()
Out[13]: True

In [14]: "hello".isalnum()
Out[14]: True

In [15]: "123".isdecimal()
Out[15]: True

In [16]: " ".isspace()
Out[16]: True

In [17]: "This Is Title Case".istitle()
Out[17]: True

In [18]: "This Is Title Case 123".istitle()
Out[18]: True

In [19]: "This Is not Title Case".istitle()
Out[19]: False

In [20]: "This Is NOT Title Case Either".istitle()
Out[20]: False

(11)
In [1]: "Hello, world!".startswith("Hello")
Out[1]: True

In [2]: "Hello, world!".endswith("world")
Out[2]: False

In [3]: "Hello, world!".endswith("world!")
Out[3]: True

In [4]: "abd123".startswith("abcdef")
Out[4]: False

In [5]: "abc123".endswith("12")
Out[5]: False

In [6]: "Hello, world!".startswith("Hello, world!")
Out[6]: True

In [7]: "Hello, world!".endswith("Hello,world!")
Out[7]: False

In [8]: "Hello, world!".endswith("Hello, world!")
Out[8]: True

(12)
In [9]: "My name is Simon".split()
Out[9]: ['My', 'name', 'is', 'Simon']

In [10]: "MyABCnameABCisABCSimon".split(ABC)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-10-04ca39cc1271> in <module>
----> 1 "MyABCnameABCisABCSimon".split(ABC)

NameError: name 'ABC' is not defined

In [11]: "My name is Simon".split("ABC")
Out[11]: ['My name is Simon']

In [12]: "MyABCnameABCisABCSimon".split("ABC")
Out[12]: ['My', 'name', 'is', 'Simon']

In [13]: "My name is Simon".split(m)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-13-5604bcc7ec79> in <module>
----> 1 "My name is Simon".split(m)

NameError: name 'm' is not defined

In [14]: "My name is Simon".split("m")
Out[14]: ['My na', 'e is Si', 'on']

(13)
In [7]: spam = """Dear Alice, How have you been? I am fine.
   ...: There is a container in the fridge
   ...: that is labeled "Milk Experiment."
   ...:
   ...:
   ...: Please do not drink it.
   ...: Sincerely,
   ...: Bob"""
In [15]: spam.split("\n")
Out[15]:
['Dear Alice, How have you been? I am fine.',
 'There is a container in the fridge',
 'that is labeled "Milk Experiment."',
 '',
 '',
 'Please do not drink it.',
 'Sincerely,',
 'Bob']

(14)
In [17]: "Hello, world!".partition("w")
Out[17]: ('Hello, ', 'w', 'orld!')

In [18]: "Hello, world!".partition("o")
Out[18]: ('Hell', 'o', ', world!')

In [19]: "Hello, world!".partition("XYZ")
Out[19]: ('Hello, world!', '', '')

In [20]: before, sep, after = "Hello, World!".partition(" ")

In [21]: before
Out[21]: 'Hello,'

In [22]: sep
Out[22]: ' '

In [23]: after
Out[23]: 'World!'

(15)
In [24]: "Hello".rjust(10)
Out[24]: '     Hello'

In [25]: "Hello".rjust(20)
Out[25]: '               Hello'

In [26]: "Hello, World".rjust(20)
Out[26]: '        Hello, World'

In [27]: "Hello".ljust(10)
Out[27]: 'Hello     '

In [28]: "Hello".rjust(20, "*")
Out[28]: '***************Hello'

In [29]: "Hello".ljust(20, "-")
Out[29]: 'Hello---------------'

In [30]: "Hello".center(20, "=")
Out[30]: '=======Hello========'

(16)
In [1]: spam = "  Hello, World  "

In [2]: spam.strip()
Out[2]: 'Hello, World'

In [3]: spam.lstrip()
Out[3]: 'Hello, World  '

In [4]: spam.rstrip()
Out[4]: '  Hello, World'

In [5]: spam = "SpamSpamBaconSpamEggsSpamSpam"

In [6]: spam.strip("ampS")
Out[6]: 'BaconSpamEggs'

(17)
In [7]: ord('A')
Out[7]: 65

In [8]: ord('4')
Out[8]: 52

In [9]: ord('!')
Out[9]: 33

In [10]: chr('65')
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-10-10a870b387e3> in <module>
----> 1 chr('65')

TypeError: an integer is required (got type str)

In [11]: ch(65)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-11-70266c2152a3> in <module>
----> 1 ch(65)

NameError: name 'ch' is not defined

In [12]: chr(65)
Out[12]: 'A'

(18)
In [12]: chr(65)
Out[12]: 'A'

In [13]: ord('B')
Out[13]: 66

In [14]: ord('A')<ord('B')
Out[14]: True

In [15]: chr(ord('A'))
Out[15]: 'A'

In [16]: chr(ord('A'+1))
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-16-c4c57d0488bb> in <module>
----> 1 chr(ord('A'+1))

TypeError: can only concatenate str (not "int") to str

In [17]: chr(ord('A+1'))
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-17-fb1b0e1a3468> in <module>
----> 1 chr(ord('A+1'))

TypeError: ord() expected a character, but string of length 3 found

In [18]: chr(ord('A')+1)
Out[18]: 'B'

(19)
In [20]: import pyperclip

In [21]: pyperclip.copy('Hello, world!')

In [22]: pyperclip.paste()
Out[22]: 'Hello, world!'